import React from 'react'
import { shallow } from 'enzyme'
import toJson from 'enzyme-to-json'
import NodesSelection from '../../components/NodesSelection'

const setup = ({
  selectedNode
}) => {
  const props = {
    setStoreState: jest.fn(),
    selectedNode,
  }

  const component = shallow(<NodesSelection {...props} />)

  return {
    component,
    props
  }
}

describe('NodesSelection', () => {
  afterEach(() => {
    jest.clearAllMocks()
  })

  it('should match snapshot when no selected node', () => {
    const {
      component
    } = setup({
      selectedNode: undefined
    })

    expect(toJson(component)).toMatchSnapshot()
  })

  it('should match snapshot when selected node', () => {
    const {
      component
    } = setup({
      selectedNode: 'http://webprotege.stanford.edu/R0jI731hv09ZcJeji1fbtY'
    })

    expect(toJson(component)).toMatchSnapshot()
  })
})
